Refactoring. Reuse code